--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta property="og:url" content="https://toka7290.github.io/TokaBlockGenelator/" />
         <meta property="og:type" content="website" />
         <meta property="og:site_name" content="とかさんのBlockGenelator" />
-        <meta property="og:title" content="ManifestGenelator" />
+        <meta property="og:title" content="BlockGenelator" />
         <meta property="og:description" content="Minecraft Bedrock Edition 向けのアドオン作成補助ツールです。block jsonを簡単に作ることができます。" />
         <meta property="og:image" content="https://toka7290.github.io/TokaBlockGenelator/img/icon_2000.png" />
         <meta name="twitter:card" content="summary">
@@ -127,7 +127,7 @@
         </header>
         <div class="content">
             <div class="editor">
-                <form name="editor_manifest">
+                <form name="editor_main">
                     <fieldset class="basic">
                         <label for="format_version">フォーマットバージョン</label>
                         <select name="format_version" id="format_version">
