--- a/index.html
+++ b/index.html
@@ -185,9 +185,8 @@
                         <div title="このブロックの地図での色を設定します。#000000~#ffffffまで設定できます。">
                             <label for="components_map_color">地図の色</label>
                             <input type="text" name="components_map_color" id="components_map_color">
-                            <label>
-                                <input type="color" name="components_map_color_pick" id="components_map_color_pick">
-                            </label>
+                            <label for="components_map_color_pick" style="display: none;"></label>
+                            <input type="color" name="components_map_color_pick" id="components_map_color_pick">
                         </div>
                         <div title="このブロックが吸収する光の量を設定します。">
                             <label for="components_block_light_absorption">光の吸収</label>
