--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 },
                 "offers": {
                     "@type": "Offer",
-                    "price": "0"
+                    "price": "0",
                     "priceCurrency": "JPN"
                 },
                 "url": "https://toka7290.github.io/TokaBlockGenelator/",
